[package]
name = "gorillatest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
gloo = "0.7.0"
serde = "1.0.137"
serde_json = "1.0.81"
stylist = {version = "0.10.0", features = ["yew"]}
web-sys = {version = "0.3.57", features = ["HtmlInputElement"]}
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
reqwest = "0.11.10"
