[package]
name = "gorillatest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
gloo = "0.7.0"
serde = "1.0.137"
serde_json = "1.0.81"
stylist = {version = "0.10.0", features = ["yew"]}
web-sys = {version = "0.3.57", features = ["HtmlInputElement"]}
getrandom = {version = "0.2.6", features = ["js"]}
rand = "0.8.5"
wasm-bindgen = "0.2.80"
